2024-01-09_kubernetes_t_mobile/labs/lab0.sikademo.com/hello_t_mobile_from_configmap.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-t-mobile-from-configmap
spec:
  selector:
    matchLabels:
      app: hello-t-mobile-from-configmap
  template:
    metadata:
      labels:
        app: hello-t-mobile-from-configmap
    spec:
      volumes:
        - name: www
          configMap:
            name: hello-t-mobile-from-configmap
      containers:
        - name: main
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: www
              subPath: index.html
              mountPath: /usr/share/nginx/html/index.html
          resources:
            requests:
              cpu: 20m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 50Mi
---
apiVersion: v1
kind: Service
metadata:
  name: hello-t-mobile-from-configmap
spec:
  selector:
    app: hello-t-mobile-from-configmap
  ports:
    - port: 80
