2024-01-09_kubernetes_t_mobile/labs/lab0.sikademo.com/sts_volume.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sts-volume
spec:
  replicas: 3
  serviceName: sts-volume
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
  selector:
    matchLabels:
      app: sts-volume
  template:
    metadata:
      labels:
        app: sts-volume
    spec:
      containers:
        - name: main
          image: sikalabs/nginx-public
          resources:
            requests:
              cpu: 50m
              memory: 50Mi
            limits:
              cpu: 50m
              memory: 50Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /usr/share/nginx/html
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data
---
apiVersion: v1
kind: Service
metadata:
  name: sts-volume
spec:
  selector:
    app: sts-volume
  ports:
    - port: 80
