2024-01-09_kubernetes_t_mobile/labs/lab0.sikademo.com/ingress-example-t-mobile.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: t-mobile
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - t-mobile.sikademo.com
      secretName: t-mobile.sikademo.com-tls
  rules:
    - host: t-mobile.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 80
