2024-01-09_kubernetes_t_mobile/labs/lab0.sikademo.com/ingress-example.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - example.k8s.sikademo.com
      secretName: example-tls
  rules:
    - host: example.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: example
                port:
                  number: 80
