2024-01-09_kubernetes_t_mobile/labs/lab0.sikademo.com/pvc_mount_example.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pvc-mount-example
spec:
  selector:
    matchLabels:
      app: pvc-mount-example
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pvc-mount-example
    spec:
      # affinity:
      #   podAffinity:
      #     requiredDuringSchedulingIgnoredDuringExecution:
      #       - topologyKey: kubernetes.io/hostname
      #         labelSelector:
      #           matchLabels:
      #             app: pvc-mount-example
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: default-pvc
      containers:
        - name: nginx
          image: sikalabs/nginx-public
          resources:
            requests:
              cpu: 20m
              memory: 30Mi
            limits:
              cpu: 50m
              memory: 50Mi
          ports:
            - containerPort: 80
          volumeMounts:
            - name: data
              mountPath: /usr/share/nginx/html
---
apiVersion: v1
kind: Service
metadata:
  name: pvc-mount-example
spec:
  type: ClusterIP
  selector:
    app: pvc-mount-example
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pvc-mount-example
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - pvc-mount-example.k8s.sikademo.com
      secretName: pvc-mount-example.k8s.sikademo.com-tls
  rules:
    - host: pvc-mount-example.k8s.sikademo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pvc-mount-example
                port:
                  number: 80
